--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"format:fix": "prettier -w src"
 	},
 	"dependencies": {
+		"classnames": "^2.3.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.15",
