--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,54 @@
 {
-  "compilerOptions": {
-    /* Language and Environment */
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "jsx": "react-jsx",
-    "useDefineForClassFields": true,
+	"compilerOptions": {
+		/* Projects */
+		"incremental": true,
+		"composite": true,
 
-    /* Modules */
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+		/* Language and Environment */
+		"target": "ESNext",
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"jsx": "react-jsx",
+		"useDefineForClassFields": true,
 
-    /* Emit */
-    "noEmit": true,
+		/* Modules */
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
 
-    /* Interop Constraints */
-    "allowSyntheticDefaultImports": true,
+		/* Emit */
+		"noEmit": true,
+		"importsNotUsedAsValues": "error",
 
-    /* Type Checking */
-    "strict": true
-  },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+		/* Interop Constraints */
+		"isolatedModules": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
+
+		/* Type Checking */
+		"strict": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictPropertyInitialization": true,
+		"noImplicitThis": true,
+		"useUnknownInCatchVariables": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noUncheckedIndexedAccess": true,
+		"noImplicitOverride": true,
+
+		"noPropertyAccessFromIndexSignature": false,
+		"allowUnusedLabels": false,
+		"allowUnreachableCode": false,
+		"exactOptionalPropertyTypes": false,
+		"noFallthroughCasesInSwitch": false,
+
+		/* Completeness */
+		"skipLibCheck": false
+	},
+	"include": ["src"]
 }
